syntax = "proto3";

package org.dash.platform.drive;

service UpdateState {
  rpc startTransaction (StartTransactionRequest) returns (StartTransactionResponse);
  rpc applyStateTransition (ApplyStateTransitionRequest) returns (ApplyStateTransitionResponse);
  rpc commitTransaction (CommitTransactionRequest) returns (CommitTransactionResponse);
}

message StartTransactionRequest {
  uint32 block_height = 1;
}

message StartTransactionResponse {}

message ApplyStateTransitionRequest {
  bytes state_transition = 1;
  uint32 block_height = 2;
}

message ApplyStateTransitionResponse {}

message CommitTransactionRequest {
  uint32 block_height = 1;
}

message CommitTransactionResponse {}
